--- a/benchy.cabal
+++ b/benchy.cabal
@@ -12,9 +12,13 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  exposed-modules:     Benchy
+  build-depends:
+    base >= 4.7 && < 5,
+    deepseq,
+    time
   default-language:    Haskell2010
+
 
 source-repository head
   type:     git
